# lingua-py

./: pyproject.toml
