#
# Copyright © 2022-present Peter M. Stahl pemistahl@gmail.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "lingua-language-detector"
version = "2.3.0"
description = "A slimmed-down language detection library - only English, Malay, Spanish, Portuguese, Indonesian. Other languages use Unicode detection."
authors = ["yqq <yqq@yqq.cn>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/youngqqcn/lingua-py"
repository = "https://github.com/youngqqcn/lingua-py"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Natural Language :: Indonesian",
    "Natural Language :: Malay",
    "Natural Language :: Portuguese",
    "Natural Language :: Spanish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
black = "^25.12.0"

[tool.poetry.group.script.dependencies]
gcld3 = "^3.0.13"
langdetect = "^1.0.9"
langid = "^1.1.6"
matplotlib = "^3.10.8"
numpy = "^2.4.2"
pandas = "^2.3.3"
psutil = "7.0.0"
pycld2 = "^0.42"
seaborn = "^0.13.2"
simplemma = "0.9.1" # Most current 1.1.2 is much too slow

[tool.mypy]
files = ["scripts"]
ignore_missing_imports = true
pretty = true

[tool.black]
include = 'scripts/.*\.py'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
